--- a/requirements.txt
+++ b/requirements.txt
@@ -96,7 +96,7 @@ espnet_model_zoo==0.1.7
 flask==2.2.3
 
 flask_cors==3.0.10
-waitress
+waitress==2.1.2
 asteroid
 
 speechbrain
@@ -104,3 +104,4 @@ timm
 typeguard
 
 pytesseract
+huggingface_hub
