--- a/.github/PULL_REQUEST_TEMPLATE.yml
+++ b/.github/PULL_REQUEST_TEMPLATE.yml
@@ -22,5 +22,4 @@ Maintainer responsibilities:
 
 If no one reviews your PR within a few days, feel free to kye@apac.ai
 
-See contribution guidelines for more information on how to write/run tests, lint, etc: https://github.com/hwchase17/langchain/blob/master/.github/CONTRIBUTING.md
- -->
+See contribution guidelines for more information on how to write/run tests, lint, etc: https://github.com/kyegomez/swarms
