--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ nest_asyncio
 bs4
 playwright
 
-duckduckgo-search
+duckduckgo_search
 faiss-cpu
 wget==3.2
 
@@ -52,7 +52,7 @@ ggl
 
 gradio_tools
 arxiv
-google-api-python-client 
+google-api-python-client
 
 google-auth-httplib2
 beautifulsoup4==4.11.2
