--- a/infra/Docker/Dockerfile.cpu
+++ b/infra/Docker/Dockerfile.cpu
@@ -12,7 +12,7 @@
 
 
 # Use an official Python runtime as a parent image
-FROM python:3.9-slim-buster
+FROM python:3.10
 
 # Set environment variables
 ENV EVAL_PORT=8000 \
