--- a/infra/Docker/Dockerfile.cpu
+++ b/infra/Docker/Dockerfile.cpu
@@ -29,7 +29,9 @@ ENV EVAL_PORT=8000 \
     WINEDB_PASSWORD=your_winedb_password \
     BING_SEARCH_URL=your_bing_search_url \
     BING_SUBSCRIPTION_KEY=your_bing_subscription_key \
-    SERPAPI_API_KEY=your_serpapi_api_key
+    SERPAPI_API_KEY=your_serpapi_api_key \
+    REDIS_HOST=your_redis_host \
+    REDIS_PORT=your_redis_port
 
 # Set work directory
 WORKDIR /usr/src/app
@@ -46,6 +48,5 @@ COPY . .
 # Expose port
 EXPOSE ${EVAL_PORT}
 
-# Run example.py when the container launches
 # Run the application
-CMD ["python3.10", "-m", "api.main", "serve"]
+CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
