--- a/infra/Docker/Dockerfile.gpu
+++ b/infra/Docker/Dockerfile.gpu
@@ -25,5 +25,9 @@ RUN python3.10 -m pip install --upgrade pip && \
 # Copy application files
 COPY . .
 
+
+# Expose port
+# EXPOSE ${EVAL_PORT}
+
 # Run the application
-CMD ["python3.10", "-m", "api.main", "serve"]
+CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
