--- a/requirements.txt
+++ b/requirements.txt
@@ -76,14 +76,14 @@ python-multipart==0.0.6
 
 celery==5.2.7
 redis==4.5.4
-sentencepiece==0.1.97
+sentencepiece
 
 bitsandbytes==0.37.2
 psycopg2-binary==2.9.5
 google-search-results==2.4.2
 
 black==23.1.0
-Pillow==9.0.0
+Pillow
 selenium
 
 # ONNI AGENT REQUIREMENTS
