--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ IFTTTKey="your_iftttkey_here"
 BRAVE_API_KEY="your_brave_api_key_here"
 SPOONACULAR_KEY="your_spoonacular_key_here"
 HF_API_KEY="your_huggingface_api_key_here"
+
+
+REDIS_HOST=
+REDIS_PORT=
