feat: Add disord_bing example
Former-commit-id: a16a96bfb85a0c9e372abe40a6a9bf842d4e419b

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ REDIS_PORT=
 #dbs
 PINECONE_API_KEY=""
 BING_COOKIE=""
+BING_AUTH=""
 
 # RevGpt Configuration
 ACCESS_TOKEN="your_access_token_here"
