--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ share/python-wheels/
 MANIFEST
 output/*
 cookes.json
+flagged/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
