feat: remove cookies.json requirement, update env
Former-commit-id: 2bb9e407af287ebe4f6b570e92d7ef4a4823c77f

--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,10 @@ REVGPT_UNVERIFIED_PLUGIN_DOMAINS="showme.redstarplugin.com"
 CHATGPT_BASE_URL=""
 
 #Discord Bot
-################################
 SAVE_DIRECTORY=""
 STORAGE_SERVICE=""
 DISCORD_TOKEN=""
+
+#Bing
+AUTH_COOKIE="_U value at bing.com"
+AUTH_COOKIE_SRCHHPGUSR"_SRCHHPGUSR value at bing.com"
