feat: Cleanup dockerfiles
Former-commit-id: 74297ff11608ed12defb8df7b688b4d4b3e8b554

--- a/apps/BingBot/compose.yaml
+++ b/apps/BingBot/compose.yaml
@@ -1,7 +1,8 @@
 version: '3'
 
 services:
-  BingBot:
+  spartan:
+    container_name: Spartan
     build: .
     environment:
       - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
