flow example and flow walkthrough guide
Former-commit-id: 53751a235989df70d4d6ac81b90a85de6ff0d47c

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,6 +118,7 @@ nav:
     - PdfChunker: "swarms/chunkers/pdf_chunker.md"
 - Examples:
     - Overview: "examples/index.md"
+    - Flow: "examples/flow.md"
     - Agents:
       - OmniAgent: "examples/omni_agent.md"
     - Worker: 
