HuggingfaceLLM, jina embeds
Former-commit-id: 29a629c997f78c0be9c3d413f6f86a501b67fc98

--- a/.github/workflows/cos_integration.yml
+++ b/.github/workflows/cos_integration.yml
@@ -39,4 +39,4 @@ jobs:
         run: sphinx-build -b linkcheck docs build/docs
 
       - name: Run performance tests
-        run: pytest tests/performance
+        run: find ./tests -name '*.py' -exec pytest {} \;
