chore: correct dir for devcontainer
Former-commit-id: 85dfb83b52b4b2a14f3fdd26a40b31b55a1f91ad

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
 services:
   app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - .:/app
+      - .:/home/zack/code/
     ports:
       - 8000:8000
