chore: fix volume
Former-commit-id: bb0bdd04551a8bdbad2780213e0ccd473ae4855b

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "Swarms Project",
     "dockerComposeFile": "docker-compose.yml",
     "service": "app",
-    "workspaceFolder": "/app",
+    "workspaceFolder": "/home/zack/code/swarms/*",
     "forwardPorts": [
         8000
     ],
