sequential workflow docs
Former-commit-id: c94512d6548c2076d7bf4cdb67b59f4a87c54b67

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,6 +111,7 @@ nav:
     - Overview: "swarms/structs/overview.md"
     - Workflow: "swarms/structs/workflow.md"
     - Flow: "swarms/structs/flow.md"
+    - SequentialWorkflow: 'swarms/structs/sequential_workflow.md'
   - swarms.memory:
     - PineconeVectorStoreStore: "swarms/memory/pinecone.md"
     - PGVectorStore: "swarms/memory/pg.md"
