--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,20 +61,6 @@ nav:
 - Home:
     - Overview: "index.md"
     - Contributing: "contributing.md"
-    - FAQ: "faq.md"
-    - Purpose: "purpose.md"
-    - Roadmap: "roadmap.md"
-    - Weaknesses: "failures.md"
-    - Design: "design.md"
-    - Flywheel: "flywheel.md"
-    - Bounties: "bounties.md"
-    - Metric: "metric.md"
-    - Distribution: "distribution"
-    - Research: "research.md"
-    - Demos: "demos.md"
-    - Architecture: "architecture.md"
-    - Checklist: "checklist.md"
-    - Hiring: "hiring.md"
 - Swarms:
   - Overview: "swarms/index.md"
   - swarms.swarms:
@@ -122,11 +108,27 @@ nav:
     - Overview: "examples/index.md"
     - Structs:
       - Flow: "examples/flow.md"
+      - SequentialWorkflow: "examples/reliable_autonomous_agents.md"
     - Agents:
       - OmniAgent: "examples/omni_agent.md"
     - Worker: 
       - Basic: "examples/worker.md"
       - StackedWorker: "examples/stacked_worker.md"
+- Corporate:
+    - FAQ: "faq.md"
+    - Purpose: "purpose.md"
+    - Roadmap: "roadmap.md"
+    - Weaknesses: "failures.md"
+    - Design: "design.md"
+    - Flywheel: "flywheel.md"
+    - Bounties: "bounties.md"
+    - Metric: "metric.md"
+    - Distribution: "distribution"
+    - Research: "research.md"
+    - Demos: "demos.md"
+    - Architecture: "architecture.md"
+    - Checklist: "checklist.md"
+    - Hiring: "hiring.md"
 - Applications:
     - CustomerSupport: 
       - Overview: "applications/customer_support.md"
