docs clean up -> corporate folder
Former-commit-id: a581bbb73fc307d9e03d5abbc316468cd2ea2ce8

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
     - AbstractSwarm: "swarms/swarms/abstractswarm.md"
     - AutoScaler: "swarms/swarms/autoscaler.md"
     - GodMode: "swarms/swarms/godmode.md"
+    - Groupchat: "swarms/swarms/groupchat.md"
   - swarms.workers:
     - AbstractWorker: "swarms/workers/base.md"
     - Overview: "swarms/workers/index.md"
@@ -114,23 +115,24 @@ nav:
     - Worker: 
       - Basic: "examples/worker.md"
       - StackedWorker: "examples/stacked_worker.md"
+    - 2O+ Autonomous Agent Blogs: "examples/ideas.md"
 - Applications:
     - CustomerSupport: 
       - Overview: "applications/customer_support.md"
     - Marketing: 
       - Overview: "applications/marketing_agencies.md" 
 - Corporate:
-    - FAQ: "faq.md"
-    - Purpose: "purpose.md"
-    - Roadmap: "roadmap.md"
-    - Weaknesses: "failures.md"
-    - Design: "design.md"
-    - Flywheel: "flywheel.md"
-    - Bounties: "bounties.md"
-    - Metric: "metric.md"
-    - Distribution: "distribution"
-    - Research: "research.md"
-    - Demos: "demos.md"
-    - Architecture: "architecture.md"
-    - Checklist: "checklist.md"
-    - Hiring: "hiring.md"
+    - FAQ: "corporate/faq.md"
+    - Purpose: "corporate/purpose.md"
+    - Roadmap: "corporate/roadmap.md"
+    - Weaknesses: "corporate/failures.md"
+    - Design: "corporate/design.md"
+    - Flywheel: "corporate/flywheel.md"
+    - Bounties: "corporate/bounties.md"
+    - Metric: "corporate/metric.md"
+    - Distribution: "corporate/distribution"
+    - Research: "corporate/research.md"
+    - Demos: "corporate/demos.md"
+    - Architecture: "corporate/architecture.md"
+    - Checklist: "corporate/checklist.md"
+    - Hiring: "corporate/hiring.md"
