--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,7 +105,7 @@ nav:
   - swarms.chunkers: 
     - BaseChunker: "swarms/chunkers/basechunker.md"
     - PdfChunker: "swarms/chunkers/pdf_chunker.md"
-- Walkthroughs:
+- Guides:
     - Overview: "examples/index.md"
     - Agents:
       - Flow: "examples/flow.md"
