--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "swarms"
-version = "2.0.1"
+version = "2.0.2"
 description = "Swarms - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
@@ -41,6 +41,7 @@ sentencepiece = "*"
 wget = "*"
 griptape = "*"
 httpx = "*"
+tiktoken = "*"
 attrs = "*"
 ggl = "*"
 beautifulsoup4 = "*"
@@ -49,7 +50,6 @@ pydantic = "*"
 tenacity = "*"
 Pillow = "*"
 chromadb = "*"
-open-interpreter = "*"
 tabulate = "*"
 termcolor = "*"
 black = "*"
