--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "swarms"
-version = "2.1.0"
+version = "2.1.3"
 description = "Swarms - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
@@ -37,6 +37,7 @@ duckduckgo-search = "*"
 faiss-cpu = "*"
 datasets = "*"
 diffusers = "*"
+accelerate = "*"
 sentencepiece = "*"
 wget = "*"
 griptape = "*"
