--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8.1"
 transformers = "*"
-openai = "*"
+openai = "0.28.1"
 langchain = "*"
 asyncio = "*"
 nest_asyncio = "*"
