--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "swarms"
-version = "2.1.4"
+version = "2.1.6"
 description = "Swarms - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
@@ -24,7 +24,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8.1"
 transformers = "*"
-openai = "0.28.1"
+openai = "*"
 langchain = "*"
 asyncio = "*"
 nest_asyncio = "*"
@@ -45,6 +45,8 @@ httpx = "*"
 tiktoken = "*"
 attrs = "*"
 ggl = "*"
+ratelimit = "*"
+
 beautifulsoup4 = "*"
 huggingface-hub = "*"
 pydantic = "*"
