--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ nav:
 - Home:
     - Overview: "index.md"
     - Contributing: "contributing.md"
+    - Docker Container Setup: "docker_setup.md"
 - Swarms:
   - Overview: "swarms/index.md"
   - swarms.swarms:
