--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "swarms"
-version = "2.1.6"
+version = "2.1.7"
 description = "Swarms - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
@@ -35,6 +35,7 @@ langchain-experimental = "*"
 playwright = "*"
 duckduckgo-search = "*"
 faiss-cpu = "*"
+backoff = "*"
 datasets = "*"
 diffusers = "*"
 accelerate = "*"
