tools for flow and general cleanup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ pydantic = "*"
 tenacity = "*"
 Pillow = "*"
 chromadb = "*"
+opencv-python-headless = "*"
 tabulate = "*"
 termcolor = "*"
 black = "*"
