tests, workflow fixes + torch verison
Former-commit-id: e0513e3c429128f24badf309c34263f1ec12fee7

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ asyncio = "*"
 nest_asyncio = "*"
 einops = "*"
 google-generativeai = "*"
-torch = "*"
+torch = "2.1.0"
 langchain-experimental = "*"
 playwright = "*"
 duckduckgo-search = "*"
