--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 OPENAI_API_KEY="your_openai_api_key_here"
 GOOGLE_API_KEY=""
 ANTHROPIC_API_KEY=""
+AI21_API_KEY="your_api_key_here"
+COHERE_API_KEY="your_api_key_here"
+ALEPHALPHA_API_KEY="your_api_key_here"
+HUGGINFACEHUB_API_KEY="your_api_key_here"
+
 
 WOLFRAM_ALPHA_APPID="your_wolfram_alpha_appid_here"
 ZAPIER_NLA_API_KEY="your_zapier_nla_api_key_here"
@@ -36,17 +41,3 @@ REDIS_PORT=
 PINECONE_API_KEY=""
 BING_COOKIE=""
 
-# RevGpt Configuration
-ACCESS_TOKEN="your_access_token_here"
-REVGPT_MODEL="gpt-4"
-REVGPT_PLUGIN_IDS="plugin-d1d6eb04-3375-40aa-940a-c2fc57ce0f51" #plugins found here https://github.com/acheong08/ChatGPT/blob/main/docs/plugins.json
-REVGPT_DISABLE_HISTORY=True
-REVGPT_PUID="your_puid_here"
-REVGPT_UNVERIFIED_PLUGIN_DOMAINS="showme.redstarplugin.com"
-CHATGPT_BASE_URL=""
-
-#Discord Bot
-################################
-SAVE_DIRECTORY=""
-STORAGE_SERVICE=""
-DISCORD_TOKEN=""
