--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8.1"
 transformers = "*"
-openai = "*"
+openai = "0.28.0"
 langchain = "*"
 asyncio = "*"
 nest_asyncio = "*"
@@ -36,6 +36,7 @@ playwright = "*"
 duckduckgo-search = "*"
 faiss-cpu = "*"
 backoff = "*"
+marshmallow = "*"
 datasets = "*"
 diffusers = "*"
 accelerate = "*"
