--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "swarms"
-version = "2.3.6"
+version = "2.3.7"
 description = "Swarms - Pytorch"
 license = "MIT"
 authors = ["Kye Gomez <kye@apac.ai>"]
@@ -39,6 +39,7 @@ backoff = "*"
 marshmallow = "*"
 datasets = "*"
 diffusers = "*"
+PyPDF2 = "*"
 accelerate = "*"
 sentencepiece = "*"
 wget = "*"
