docs, document lm fix, and corporate swarm cloud

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,3 +134,4 @@ nav:
     - Architecture: "corporate/architecture.md"
     - Checklist: "corporate/checklist.md"
     - Hiring: "corporate/hiring.md"
+    - SwarmCloud: "corporate/swarm_cloud.md"
