mkdocs fix for autoscaler and eleven labs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,6 @@ nav:
   - Overview: "swarms/index.md"
   - swarms.swarms:
     - AbstractSwarm: "swarms/swarms/abstractswarm.md"
-    - AutoScaler: "swarms/swarms/autoscaler.md"
     - GodMode: "swarms/swarms/godmode.md"
     - Groupchat: "swarms/swarms/groupchat.md"
   - swarms.workers:
@@ -96,9 +95,10 @@ nav:
       - GPT4V: "swarms/models/gpt4v.md"
       - LayoutLMDocumentQA: "swarms/models/layoutlm_document_qa.md"
       - DistilWhisperModel: "swarms/models/distilled_whisperx.md"
+      - ElevenLabsText2SpeechTool: "swarms/models/elevenlabs.md"
   - swarms.structs:
     - Overview: "swarms/structs/overview.md"
-    - Workflow: "swarms/structs/workflow.md"
+    - AutoScaler: "swarms/swarms/autoscaler.md"
     - Flow: "swarms/structs/flow.md"
     - SequentialWorkflow: 'swarms/structs/sequential_workflow.md'
   - swarms.memory:
