--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         test_type:
           - "core"
           - "extended"
-    - name: Install Poetry
+    name: Install Poetry
         uses: snok/install-poetry@v1
     name: Python ${{ matrix.python-version }} ${{ matrix.test_type }}
     steps:
