flake8 yaml lint fix

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,13 +14,9 @@ jobs:
         uses: ibiqlik/action-yamllint@v3
   flake8-lint:
     runs-on: ubuntu-latest
-    name: Lint
+    name: flake8 Lint
     steps:
       - name: Check out source repository
         uses: actions/checkout@v4
       - name: Set up Python environment
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-      - name: flake8 Lint
         uses: py-actions/flake8@v2
