--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    name: Build Docker image
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
