--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,3 +91,6 @@ max-line-length = 200
 
 [tool.flake8]
 extend-ignore = "E266, E501, W292, W291, W293i"
+
+[tool.yamllint]
+disable-line rule:truthy
